--- a/themes/bootstrap-2/stylesheets/style.css
+++ b/themes/bootstrap-2/stylesheets/style.css
@@ -10,7 +10,8 @@ body {
 #logo {
   margin-top: 20px;
   height: 300px;
-  background-image: url('../../images/theme/header.jpg');
+/*   background-image: url('../../images/theme/header.jpg'); */
+  background-image: url('../../images/theme/glass3.jpg');
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
