--- a/themes/bootstrap-2/stylesheets/style.css
+++ b/themes/bootstrap-2/stylesheets/style.css
@@ -1,22 +1,24 @@
 body {
-  background: #edece3;
+	background: #edece3;
 }
 
 /* Page header classes */
 .navbar {
-  border-radius: 0;
+	border-radius: 0;
 }
 
 #logo {
-  margin-top: 20px;
-  height: 300px;
-/*   background-image: url('../../images/theme/header.jpg'); */
-  background-image: url('../../images/theme/glass3.jpg');
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	/*   margin-top: 20px; */
+	margin-top: -25px;
+	height: 300px;
+	/*   background-image: url('../../images/theme/header.jpg'); */
+	/*   background-image: url('../../images/theme/glass3.jpg'); */
+	background-image: url('http://bourbonblonde.com/files/resource/5/IMG_5594.JPG');
+	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .vertical-container {
@@ -36,7 +38,7 @@ body {
 }
 
 .subtitle {
-  color: #999;
+  color: #FFF;
   font-size: 1.2em;
   font-weight: bold;
 }
